--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -7,13 +7,13 @@ security:
             algorithm: auto
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # users_in_memory: { memory: null }
 
         # used to reload user from session & other features (e.g. switch_user)
-        # app_user_provider:
-        #     entity:
-        #         class: App\Entity\User
-        #         property: email
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         # intercepts API road
         login:
@@ -28,9 +28,10 @@ security:
         api:
             pattern:   ^/api/v1
             stateless: true
-            guard:
-                authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
+            jwt: ~
+            #guard:
+                # authenticators:
+                    # - lexik_jwt_authentication.jwt_token_authenticator
 
         # dev road
         dev:
@@ -38,10 +39,19 @@ security:
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
+
+            # form_login:
+                # "login" is the name of the route created previously
+                # login_path: login
+                # check_path: login
+
+            # logout:
+                # Correspond au nom de la route, name="logout"
+                # path: logout
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
@@ -51,16 +61,16 @@ security:
     access_control:
 
         # Front : If ROLE_USER : add comment on an establishement.
-        # - { path: ^/etablissements/{slug}/commentaires/ajouter, roles: ROLE_USER }
+        - { path: ^/etablissements/^[a-z0-9]+(?:-[a-z0-9]+)*$/commentaires/ajouter, roles: ROLE_USER }
 
         # Front : If ROLE_USER : can submit a new establishement.
-        # - { path: ^/etablissements/ajouter, roles: ROLE_USER }
+        - { path: ^/etablissements/ajouter, roles: ROLE_USER }
 
         # Back : Secure every road to back with ROLE_ADMIN.
-        # - { path: ^/back, roles: ROLE_ADMIN }
+        - { path: ^/back, roles: ROLE_ADMIN }
 
         # API road 
-        # - { path: ^/api/v1, methods: POST, roles: ROLE_ADMIN }
+        - { path: ^/api/v1, methods: POST, roles: ROLE_ADMIN }
 
 when@test:
     security:
