--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -54,7 +54,6 @@ security:
                 # "login" is the name of the route created previously
                 login_path: login
                 check_path: login
-                default_target_path: menu
                 
 
             logout:
@@ -77,10 +76,7 @@ security:
         - { path: ^/etablissements/ajouter, roles: ROLE_USER }
 
         # Back : Secure every road to back with ROLE_ADMIN.
-        - { path: ^/menu, roles: ROLE_ADMIN }
-        - { path: ^/quartiers, roles: ROLE_ADMIN }
-        - { path: ^/etablissement, roles: ROLE_ADMIN }
-        - { path: ^/user, roles: ROLE_ADMIN }
+        - { path: ^/back, roles: ROLE_ADMIN }
 
         # API road 
         - { path: ^/api/v1/new, roles: ROLE_ADMIN, methods: POST}
