--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,7 +13,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: 'email'
     firewalls:
         # intercepts API road
         login:
