FEAT - User GET/POST/PUT/DELETE with ACL done

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -84,6 +84,7 @@ security:
 
         # API road 
         - { path: ^/api/v1/new, roles: ROLE_ADMIN, methods: POST}
+        # - { path: ^/api/v1/profils, roles: ROLE_USER}
 
     role_hierarchy:
         # ADMIN > USER
